--- a/src/pages/home.kv
+++ b/src/pages/home.kv
@@ -76,7 +76,7 @@
 			pos_hint: {"top": .65, 'center_x': .5}
 			on_release:
 				app.change_screen('solo', 'up')
-				app.execute_show_options("solo")
+				app.execute_show_options("solo", 'avatar')
 
 		Button:
 			id: multi_player
