Further developments on the solo gamemode

--- a/src/pages/solo.kv
+++ b/src/pages/solo.kv
@@ -34,7 +34,7 @@
 			bold: True
 			background_normal: 'src/img/restore.png'
 			on_release:
-				app.reset_net('solo')
+				app.reset_screen('solo')
 				app.execute_show_options("solo")
 		BoxLayout:
 			id: box
