--- a/src/pages/solo.kv
+++ b/src/pages/solo.kv
@@ -25,7 +25,7 @@
         	#	center_y: self.parent.center_y
 			
 			on_release:
-				app.change_screen('home', 'down', 'solo')
+				app.change_screen('home', 'down')
 		Button:
 			pos_hint: {"x":.07, "top":.98}
 			size_hint: [None, None]
@@ -35,7 +35,7 @@
 			background_normal: 'src/img/restore.png'
 			on_release:
 				app.reset_screen('solo')
-				app.execute_show_options("solo")
+				
 		BoxLayout:
 			id: box
 			orientation: "vertical"
