--- a/src/pages/home.kv
+++ b/src/pages/home.kv
@@ -112,7 +112,10 @@
 			pos_hint: {"top": .52, 'center_x': .5}
 			on_release:
 				app.change_screen('poly', 'up')
-				app.execute_show_options("poly")
+				app.reset_screen('poly')
+				app.player_names("poly")
+				#app.change_screen('poly', 'up')
+				#app.execute_show_options("poly")
 
         Button:
 			id: lan
@@ -125,5 +128,6 @@
 			font_size: "25sp"
 			height: 50
 			pos_hint: {"top": .37, 'center_x': .5}
+			disabled: True
 			on_release:
 				app.change_screen('lan', 'right')
