--- a/src/pages/home.kv
+++ b/src/pages/home.kv
@@ -128,6 +128,6 @@
 			font_size: "25sp"
 			height: 50
 			pos_hint: {"top": .37, 'center_x': .5}
-			disabled: True
+			#disabled: True
 			on_release:
-				app.change_screen('lan', 'right')
+				app.change_screen('options', 'left')
