Lan mode development progress, screens added

--- a/src/pages/home.kv
+++ b/src/pages/home.kv
@@ -130,4 +130,5 @@
 			pos_hint: {"top": .37, 'center_x': .5}
 			#disabled: True
 			on_release:
-				app.change_screen('options', 'left')
+				#app.change_screen('options', 'left')
+				app.setup_lan('lan')
