--- a/src/pages/options.kv
+++ b/src/pages/options.kv
@@ -39,7 +39,7 @@
 			font_size: self.width/15
 			pos_hint: {"top": .2, 'center_x': .3}
 			on_release:
-				#app.create_server(room_name, room_ip, room_port, room_hosts, room_password, room_encryption)
+				app.create_server(input_ip, input_port, input_encryption, input_password)
 				#app.default_clients()
 				#app.add_client_view()
 
