--- a/src/pages/options.kv
+++ b/src/pages/options.kv
@@ -40,8 +40,6 @@
 			pos_hint: {"top": .2, 'center_x': .3}
 			on_release:
 				app.create_server(input_ip, input_port, input_encryption, input_password)
-				#app.default_clients()
-				#app.add_client_view()
 
 		Button:
 			id: lan_start
@@ -55,6 +53,9 @@
 			pos_hint: {"top": .2, 'center_x': .7}
 			disabled: True
 			on_release:
+				app.change_screen('solo', 'up')
+				app.reset_screen('solo')
+				#app.player_names("solo")
 
         GridLayout: 
 			id: grid
