Improvements on lan game, successfull trial of the game. End and Reset game working. Game positions and sync working

--- a/src/pages/lan.kv
+++ b/src/pages/lan.kv
@@ -34,7 +34,7 @@
 			bold: True
 			background_normal: 'src/img/restore.png'
 			on_release:
-				app.reset_screen('solo')
+				app.reset_screen('lan', True)
 				
 		BoxLayout:
 			id: update
