--- a/src/pages/poly.kv
+++ b/src/pages/poly.kv
@@ -35,7 +35,7 @@
 			bold: True
 			background_normal: 'src/img/restore.png'
 			on_release:
-				app.reset_screen('solo')
+				app.reset_screen('poly')
 				
 		BoxLayout:
 			id: update
